--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
     "name": "react-supabase",
-    "version": "0.2.0",
+    "version": "0.3.0",
     "description": "React Hooks library for Supabase",
+    "type": "module",
+    "files": ["dist"],
     "main": "./dist/index.cjs.js",
-    "module": "./dist/index.es.js",
+    "module": "./dist/index.js",
     "types": "./dist/types/index.d.ts",
     "exports": {
-        "import": "./dist/index.es.js",
+        "import": "./dist/index.js",
         "require": "./dist/index.cjs.js"
     },
     "sideEffects": false,
-    "files": [
-        "dist/**"
-    ],
     "repository": "tmm/react-supabase",
     "homepage": "https://react-supabase.vercel.app",
     "license": "MIT",
@@ -23,48 +22,45 @@
         "lint:fix": "yarn lint --fix",
         "lint:format": "prettier --write .",
         "lint:types": "tsc --noEmit",
-        "prepare": "husky install",
         "prepublishOnly": "yarn clean && yarn build",
         "size": "size-limit",
         "test": "jest"
     },
     "peerDependencies": {
-        "@supabase/supabase-js": "^1.11.6",
-        "react": "^17.0.0"
+        "@supabase/supabase-js": "^2.49.1",
+        "react": "^19.0.0"
     },
     "dependencies": {},
     "devDependencies": {
-        "@size-limit/preset-small-lib": "^4.12.0",
-        "@supabase/postgrest-js": "0.34.1",
-        "@supabase/supabase-js": "1.25.2",
-        "@testing-library/react-hooks": "^5.1.1",
-        "@types/jest": "^26.0.24",
-        "@types/node": "^14.17.32",
-        "@types/react": "^17.0.34",
-        "@typescript-eslint/eslint-plugin": "^4.33.0",
-        "@typescript-eslint/parser": "^4.33.0",
-        "eslint": "^7.32.0",
-        "eslint-config-prettier": "^8.2.0",
-        "eslint-import-resolver-typescript": "^2.5.0",
-        "eslint-plugin-import": "^2.25.2",
-        "eslint-plugin-jest-dom": "^3.9.2",
-        "eslint-plugin-prettier": "^3.4.1",
-        "eslint-plugin-react": "^7.26.1",
-        "eslint-plugin-react-hooks": "^4.2.0",
-        "eslint-plugin-testing-library": "^4.12.4",
-        "husky": "^6.0.0",
-        "jest": "^26.6.3",
-        "jest-watch-typeahead": "^0.6.5",
-        "lint-staged": "^10.5.4",
-        "prettier": "^2.4.1",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
-        "rimraf": "^3.0.2",
-        "size-limit": "^4.12.0",
-        "ts-jest": "^26.5.5",
-        "ts-node": "^10.4.0",
-        "typescript": "^4.4.4",
-        "vite": "^2.6.13",
-        "vite-plugin-dts": "^0.5.3"
-    }
+        "@size-limit/preset-small-lib": "^11.2.0",
+        "@supabase/postgrest-js": "1.19.2",
+        "@supabase/supabase-js": "2.49.1",
+        "@types/jest": "^29.5.14",
+        "@types/node": "^22.13.5",
+        "@types/react": "^19.0.10",
+        "@typescript-eslint/eslint-plugin": "^8.25.0",
+        "@typescript-eslint/parser": "^8.25.0",
+        "eslint": "^9.21.0",
+        "eslint-config-prettier": "^10.0.1",
+        "eslint-import-resolver-typescript": "^3.8.3",
+        "eslint-plugin-import": "^2.31.0",
+        "eslint-plugin-jest-dom": "^5.5.0",
+        "eslint-plugin-prettier": "^5.2.3",
+        "eslint-plugin-react": "^7.37.4",
+        "eslint-plugin-react-hooks": "^5.1.0",
+        "jest": "^29.7.0",
+        "jest-watch-typeahead": "^2.2.2",
+        "lint-staged": "^15.4.3",
+        "prettier": "^3.5.2",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0",
+        "rimraf": "^6.0.1",
+        "size-limit": "^11.2.0",
+        "ts-jest": "^29.2.6",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.7.3",
+        "vite": "^6.2.0",
+        "vite-plugin-dts": "^4.5.0"
+    },
+    "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
