--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,17 @@
 {
     "compilerOptions": {
         "allowJs": false,
+        "allowSyntheticDefaultImports": true,
+        "allowImportingTsExtensions": true,
         "declaration": true,
+        "declarationMap": true,
         "esModuleInterop": true,
         "forceConsistentCasingInFileNames": true,
         "isolatedModules": true,
         "jsx": "react",
         "lib": ["dom", "esnext"],
-        "module": "commonjs",
-        "moduleResolution": "node",
+        "module": "NodeNext",
+        "moduleResolution": "NodeNext",
         "noFallthroughCasesInSwitch": true,
         "noImplicitAny": false,
         "noImplicitReturns": true,
@@ -18,10 +21,12 @@
         "resolveJsonModule": true,
         "skipLibCheck": false,
         "strict": true,
-        "target": "esnext",
+        "stripInternal": true,
+        "target": "ESNext",
         "types": ["node", "jest"]
     },
-    "include": ["src/**/*"],
+    "include": ["src"],
+    "exclude": ["node_modules/**/*.ts"],
     "watchOptions": {
         "watchFile": "useFsEvents",
         "watchDirectory": "useFsEvents",
