--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "@size-limit/preset-small-lib": "^11.2.0",
         "@supabase/postgrest-js": "1.19.2",
         "@supabase/supabase-js": "2.49.1",
+        "@testing-library/react": "^16.2.0",
         "@types/jest": "^29.5.14",
         "@types/node": "^22.13.5",
         "@types/react": "^19.0.10",
