--- a/package.json
+++ b/package.json
@@ -32,9 +32,13 @@
     },
     "dependencies": {},
     "devDependencies": {
+        "@eslint/compat": "^1.2.7",
+        "@eslint/eslintrc": "^3.3.0",
+        "@eslint/js": "^9.21.0",
         "@size-limit/preset-small-lib": "^11.2.0",
         "@supabase/postgrest-js": "1.19.2",
         "@supabase/supabase-js": "2.49.1",
+        "@testing-library/dom": "^10.4.0",
         "@testing-library/react": "^16.2.0",
         "@types/jest": "^29.5.14",
         "@types/node": "^22.13.5",
@@ -49,6 +53,7 @@
         "eslint-plugin-prettier": "^5.2.3",
         "eslint-plugin-react": "^7.37.4",
         "eslint-plugin-react-hooks": "^5.1.0",
+        "eslint-plugin-testing-library": "^7.1.1",
         "jest": "^29.7.0",
         "jest-watch-typeahead": "^2.2.2",
         "lint-staged": "^15.4.3",
