--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -14,15 +14,15 @@ jobs:
         node-version: [23]
     steps:
       - name: Check out
-        uses: actions/checkout@v4.2.2
+        uses: actions/checkout@v4
 
       - name: Set up Node ${{ matrix.node-version }}
-        uses: actions/setup-node@v4.2.0
+        uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
 
       - name: Load yarn cache
-        uses: actions/cache@v4.0.0
+        uses: actions/cache@v4
         id: yarn-cache
         with:
           path: ./node_modules
@@ -31,7 +31,7 @@ jobs:
 
       - name: Install dependencies
         if: steps.yarn-cache.outputs.cache-hit != 'true'
-        run: yarn --frozen-lockfile
+        run: yarn install --frozen-lockfile
 
       - name: Lint code
         run: yarn lint
@@ -50,15 +50,15 @@ jobs:
         node-version: [23]
     steps:
       - name: Check out
-        uses: actions/checkout@v4.2.2
+        uses: actions/checkout@v4
 
       - name: Set up Node ${{ matrix.node-version }}
-        uses: actions/setup-node@v4.2.0
+        uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
 
       - name: Load yarn cache
-        uses: actions/cache@v4.0.0
+        uses: actions/cache@v4
         id: yarn-cache
         with:
           path: ./node_modules
@@ -67,7 +67,7 @@ jobs:
 
       - name: Install dependencies
         if: steps.yarn-cache.outputs.cache-hit != 'true'
-        run: yarn --frozen-lockfile
+        run: yarn install --frozen-lockfile
 
       - name: Run tests
         run: yarn test
