--- a/.github/workflows/size.yaml
+++ b/.github/workflows/size.yaml
@@ -12,15 +12,15 @@ jobs:
         node-version: [23]
     steps:
       - name: Check out
-        uses: actions/checkout@v4.2.2
+        uses: actions/checkout@v4
 
       - name: Set up Node ${{ matrix.node-version }}
-        uses: actions/setup-node@v4.2.0
+        uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
 
       - name: Load yarn cache
-        uses: actions/cache@v4.0.0
+        uses: actions/cache@v4
         id: yarn-cache
         with:
           path: ./node_modules
@@ -29,7 +29,7 @@ jobs:
 
       - name: Install dependencies
         if: steps.yarn-cache.outputs.cache-hit != 'true'
-        run: yarn --frozen-lockfile
+        run: yarn install --frozen-lockfile
 
       - uses: andresz1/size-limit-action@v1.8.0
         with:
