--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
         "eslint-plugin-testing-library": "^7.1.1",
         "jest": "^29.7.0",
         "jest-watch-typeahead": "^2.2.2",
+        "jest-environment-jsdom": "^29.7.0",
         "lint-staged": "^15.4.3",
         "prettier": "^3.5.2",
         "react": "^19.0.0",
