--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "require": "./dist/index.cjs.js"
     },
     "sideEffects": false,
-    "repository": "tmm/react-supabase",
+    "repository": "eryx12o45/react-supabase",
     "homepage": "https://react-supabase.vercel.app",
     "license": "MIT",
     "scripts": {
