--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "version": "0.3.0",
     "description": "React Hooks library for Supabase",
     "type": "module",
-    "files": ["dist"],
+    "files": [
+        "dist"
+    ],
     "main": "./dist/index.cjs.js",
     "module": "./dist/index.js",
     "types": "./dist/types/index.d.ts",
@@ -32,41 +34,41 @@
     "dependencies": {},
     "devDependencies": {
         "@eslint/compat": "^1.2.7",
-        "@eslint/eslintrc": "^3.3.0",
-        "@eslint/js": "^9.21.0",
+        "@eslint/eslintrc": "^3.3.1",
+        "@eslint/js": "^9.23.0",
         "@size-limit/preset-small-lib": "^11.2.0",
-        "@supabase/postgrest-js": "1.19.2",
-        "@supabase/supabase-js": "2.49.1",
+        "@supabase/postgrest-js": "1.19.3",
+        "@supabase/supabase-js": "2.49.3",
         "@testing-library/dom": "^10.4.0",
         "@testing-library/react": "^16.2.0",
         "@types/jest": "^29.5.14",
-        "@types/node": "^22.13.5",
-        "@types/react": "^19.0.10",
-        "@typescript-eslint/eslint-plugin": "^8.25.0",
-        "@typescript-eslint/parser": "^8.25.0",
-        "eslint": "^9.21.0",
-        "eslint-config-prettier": "^10.0.1",
-        "eslint-import-resolver-typescript": "^3.8.3",
+        "@types/node": "^22.13.13",
+        "@types/react": "^19.0.12",
+        "@typescript-eslint/eslint-plugin": "^8.28.0",
+        "@typescript-eslint/parser": "^8.28.0",
+        "eslint": "^9.23.0",
+        "eslint-config-prettier": "^10.1.1",
+        "eslint-import-resolver-typescript": "^4.2.4",
         "eslint-plugin-import": "^2.31.0",
         "eslint-plugin-jest-dom": "^5.5.0",
-        "eslint-plugin-prettier": "^5.2.3",
+        "eslint-plugin-prettier": "^5.2.5",
         "eslint-plugin-react": "^7.37.4",
-        "eslint-plugin-react-hooks": "^5.1.0",
+        "eslint-plugin-react-hooks": "^5.2.0",
         "eslint-plugin-testing-library": "^7.1.1",
         "jest": "^29.7.0",
-        "jest-watch-typeahead": "^2.2.2",
         "jest-environment-jsdom": "^29.7.0",
-        "lint-staged": "^15.4.3",
-        "prettier": "^3.5.2",
+        "jest-watch-typeahead": "^2.2.2",
+        "lint-staged": "^15.5.0",
+        "prettier": "^3.5.3",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "rimraf": "^6.0.1",
         "size-limit": "^11.2.0",
-        "ts-jest": "^29.2.6",
+        "ts-jest": "^29.3.0",
         "ts-node": "^10.9.2",
-        "typescript": "^5.7.3",
-        "vite": "^6.2.0",
-        "vite-plugin-dts": "^4.5.0"
+        "typescript": "^5.8.2",
+        "vite": "^6.2.3",
+        "vite-plugin-dts": "^4.5.3"
     },
     "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
